--- a/rails-demo/app/views/layouts/application.html.erb
+++ b/rails-demo/app/views/layouts/application.html.erb
@@ -49,6 +49,7 @@
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
             <li><%= link_to "Users", "/users"  %></li>
+            <li><%= link_to "Oders", "/orders"  %></li>
           </ul>
         </div>
       </div>
