--- a/rails-demo/app/views/orders/_form.html.erb
+++ b/rails-demo/app/views/orders/_form.html.erb
@@ -25,7 +25,7 @@
   <div class="control-group">
     <%= f.label :user_id, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :user_id, :class => 'form-control' %>
+      <%= f.collection_select :user_id, User.all, :id, :name, {prompt: "Select a User"}, {class: 'form-control'}%>
     </div>
     <%= error_span(@order[:user_id]) %>
   </div>
