--- a/rails-demo/app/views/orders/index.html.erb
+++ b/rails-demo/app/views/orders/index.html.erb
@@ -17,7 +17,11 @@
       <tr>
         <td><%= link_to order.id, order_path(order) %></td>
         <td><%= order.number %></td>
-        <td><%= order.user_id %></td>
+        <td>
+          <% if order.user %>
+              <%= order.user.name %>
+          <% end %>
+        </td>
         <td><%=l order.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
