--- a/rails-demo/app/views/orders/show.html.erb
+++ b/rails-demo/app/views/orders/show.html.erb
@@ -7,7 +7,11 @@
   <dt><strong><%= model_class.human_attribute_name(:number) %>:</strong></dt>
   <dd><%= @order.number %></dd>
   <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
-  <dd><%= @order.user_id %></dd>
+  <dd>
+    <% if @order.user %>
+        <%= @order.user.name %>
+    <% end %>
+  </dd>
 </dl>
 
 <%= link_to t('.back', :default => t("helpers.links.back")),
