--- a/rails-demo/app/views/orders/_form.html.erb
+++ b/rails-demo/app/views/orders/_form.html.erb
@@ -29,6 +29,13 @@
     </div>
     <%= error_span(@order[:user_id]) %>
   </div>
+  <div class="control-group">
+    <%= f.label :tracking_number, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :tracking_number, :class => 'form-control' %>
+    </div>
+    <%= error_span(@order[:tracking_number]) %>
+  </div>
 
 
   <%= f.submit nil, :class => 'btn btn-primary' %>
