--- a/rails-demo/app/views/orders/show.html.erb
+++ b/rails-demo/app/views/orders/show.html.erb
@@ -12,6 +12,8 @@
         <%= @order.user.name %>
     <% end %>
   </dd>
+  <dt><strong><%= model_class.human_attribute_name(:tracking_number) %>:</strong></dt>
+  <dd><%= @order.tracking_number %></dd>
 </dl>
 
 <%= link_to t('.back', :default => t("helpers.links.back")),
